@@ -444,6 +444,13 @@ This includes (X)HTML elements with an "href" atrribute and XLink "simple" links
 ____
 
 
+|\'noloadplugins'| |\'loadplugins'|
+||'loadplugins'|| boolean (default on)
+____
+Load plugin scripts when starting up.
+____
+
+
 |\'nomore'| |\'more'|
 ||'more'|| boolean (default: on)
 ____
@@ -484,6 +491,7 @@ ____
 ____
 Show and set the \'work offline' behavior.
 ____
+
 
 |\'pageinfo' \'pa'|
 ||'pageinfo' 'pa'||
