@@ -17,7 +17,9 @@ The plugin directory is named:
 * Unix and Mac - [a]\~/.vimperator/plugin[a]
 * Windows - [a]\~/vimperator/plugin[a]
 
-The user's '$HOME'(~) directory is determined as follows:
+Plugins will not be sourced if 'noloadplugins' is set.
+
+The user's \'$HOME'(~) directory is determined as follows:
 
 * Unix and Mac - _$HOME_ is used.
 * Windows - if _%HOME%_ is set then this is used, otherwise _%USERPROFILE%_ or finally
